Enhance AI Assistant safety settings: re-enable safety settings for content moderation to improve response filtering.

--- a/who_we_are.html
+++ b/who_we_are.html
@@ -2311,12 +2311,12 @@ function initAIAssistant() {
             const payload = {
                 contents: chatHistory,
                 // Optional: Add safety settings to reduce content blocking.
-                // safetySettings: [
-                //   { "category": "HARM_CATEGORY_HARASSMENT", "threshold": "BLOCK_NONE" },
-                //   { "category": "HARM_CATEGORY_HATE_SPEECH", "threshold": "BLOCK_NONE" },
-                //   { "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT", "threshold": "BLOCK_NONE" },
-                //   { "category": "HARM_CATEGORY_DANGEROUS_CONTENT", "threshold": "BLOCK_NONE" }
-                // ]
+                 safetySettings: [
+                   { "category": "HARM_CATEGORY_HARASSMENT", "threshold": "BLOCK_NONE" },
+                   { "category": "HARM_CATEGORY_HATE_SPEECH", "threshold": "BLOCK_NONE" },
+                   { "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT", "threshold": "BLOCK_NONE" },
+                   { "category": "HARM_CATEGORY_DANGEROUS_CONTENT", "threshold": "BLOCK_NONE" }
+                ]
             };
 
             const response = await fetch(apiUrl, {
