Refactor services page: Remove unused CSS properties and enhance list styling for better readability.

--- a/services.html
+++ b/services.html
@@ -177,7 +177,6 @@
         @media (min-width: 768px) { .hero-content h1 { font-size: 4.5rem; } }
         .hero-content p {
             font-size: 1.25rem;
-            max-w-3xl;
             margin: 0 auto 2rem;
             color: var(--text-secondary);
         }
@@ -255,7 +254,6 @@
         .service-text ul {
             list-style-type: none;
             padding: 0;
-            space-y-3;
         }
         .service-text ul li {
             display: flex;
@@ -467,11 +465,11 @@
                         <p class="service-subtitle">Architecting solutions as unique as your business.</p>
                         <p class="text-secondary mb-6">We don't believe in one-size-fits-all. Our custom development process involves a deep dive into your operations to build software that solves your specific challenges, enhances efficiency, and provides a platform for future growth.</p>
                         <ul>
+                        <ul class="space-y-3">
                             <li><i class="fas fa-check"></i><span>Scalable backend systems and robust APIs.</span></li>
                             <li><i class="fas fa-check"></i><span>Performance-optimized web and mobile applications.</span></li>
                             <li><i class="fas fa-check"></i><span>Cloud-native architecture for reliability and flexibility.</span></li>
                         </ul>
-                    </div>
                     <div class="service-visual" id="lottie-development"></div>
                 </div>
             </section>
@@ -483,11 +481,11 @@
                         <p class="service-subtitle">Embedding intelligence into your operations.</p>
                         <p class="text-secondary mb-6">Unlock the power of your data. We design and deploy machine learning models that automate complex processes, predict future trends, and deliver personalized experiences, giving you a distinct competitive advantage.</p>
                         <ul>
+                        <ul class="space-y-3">
                             <li><i class="fas fa-check"></i><span>Predictive analytics and forecasting models.</span></li>
                             <li><i class="fas fa-check"></i><span>Natural Language Processing (NLP) for text analysis.</span></li>
                             <li><i class="fas fa-check"></i><span>Computer Vision for image and video recognition.</span></li>
                         </ul>
-                    </div>
                     <div class="service-visual" id="lottie-ai"></div>
                 </div>
             </section>
